// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlightedSearchQuery should syntax highlight filter 1`] = `
<DocumentFragment>
  <span
    class="text-monospace search-query-link"
  >
    <span
      class="search-filter-keyword"
    >
      repo
    </span>
    <span
      class="search-filter-separator"
    >
      :
    </span>
    sourcegraph 
    <span
      class="search-filter-keyword"
    >
      lang
    </span>
    <span
      class="search-filter-separator"
    >
      :
    </span>
    go
  </span>
</DocumentFragment>
`;

exports[`SyntaxHighlightedSearchQuery should syntax highlight filter and operator 1`] = `
<DocumentFragment>
  <span
    class="text-monospace search-query-link"
  >
    <span
      class="search-filter-keyword"
    >
      repo
    </span>
    <span
      class="search-filter-separator"
    >
      :
    </span>
    sourcegraph test 
    <span
      class="search-keyword"
    >
      and
    </span>
     spec
  </span>
</DocumentFragment>
`;

exports[`SyntaxHighlightedSearchQuery should syntax highlight negated filter 1`] = `
<DocumentFragment>
  <span
    class="text-monospace search-query-link"
  >
    <span
      class="search-filter-keyword"
    >
      -lang
    </span>
    <span
      class="search-filter-separator"
    >
      :
    </span>
    ts test
  </span>
</DocumentFragment>
`;

exports[`SyntaxHighlightedSearchQuery should syntax highlight operator 1`] = `
<DocumentFragment>
  <span
    class="text-monospace search-query-link"
  >
    test 
    <span
      class="search-keyword"
    >
      or
    </span>
     spec
  </span>
</DocumentFragment>
`;
